@@ -26,6 +26,7 @@ Version dev-4.1 (expected 26/02/2012)
     * Add add source function to tools.php
     * Add add template function to tools.php
     * Add nave template initial support for itwp
+    * Add album template initial support for itwp
 
 Version 4.0 (25/02/2012)
     * Removed all unused files
